# Spotify-Bot

./: .env  README.md  pyproject.toml  pytest.ini  requirements.txt
src/: __init__.py  bot.py  config.py  imghdr.py
src/handlers/: callbacks.py  commands.py  search.py
src/models/: types.py
src/services/: cache.py  preview.py  spotify_client.py
src/utils/: helpers.py
