[tool.poetry]
name = "spotify-telegram-bot"
version = "0.1.0"
description = "A Telegram bot for searching and sharing songs, artists, and playlists from Spotify."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^13.7"
spotipy = "^2.19.0"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"